@@ -4,7 +4,18 @@ rm -rf autom4te.cache
 find . -name Makefile -exec rm {} \;
 find . -name Makefile.in -exec rm {} \;
 
-aclocal $*
-autoheader
-autoconf
-automake --copy --add-missing
+echo "Running aclocal..."
+aclocal || exit 1
+echo "Done with aclocal"
+
+echo "Running autoheader..."
+autoheader || exit 1
+echo "Done with autoheader"
+
+echo "Running aclocal..."
+automake --copy --add-missing || exit 1
+echo "Done with automake"
+
+echo "Running autoconf..."
+autoconf || exit 1
+echo "Done with autoconf"
